--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "cy:cli" : "cypress open"
+    "cy:cli" : "cypress open",
+    "cy:headless" : "cypress run --headless -b chrome"
   },
   "author": "",
   "license": "ISC",
