add: cypress file upload

--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "cy:cli" : "cypress open",
-    "cy:headless" : "cypress run --headless -b chrome"
+    "cy:cli": "cypress open",
+    "cy:headless": "cypress run --headless -b chrome"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^13.6.1"
+    "cypress": "^13.6.1",
+    "cypress-file-upload": "^5.0.8"
   }
 }
